# sipnav-client

./: .gitignore  CHANGELOG.md  LICENSE  README.md  VERSIONING.md  VERSION_QUICKSTART.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: sync-docs.yml  test-build.yml
docs/: .pages  building-docs.md  index.md  installation.md  roadmap.md
docs/api-reference/: .pages  index.md
docs/examples/: .pages  index.md
docs/releases/: v0.3.0.md
docs/stylesheets/: extra.css
docs/user-guide/: .pages  api-coverage.md  authentication.md  error-handling.md  index.md  quickstart.md  tui.md
examples/: basic_usage.py
src/sipnav/: __init__.py  client.py  exceptions.py
src/sipnav/resources/: __init__.py  accounts.py  authentication.py  base.py  call_restrictions.py  carriers.py  cdr.py  companies.py  lrn.py  rate_deck.py
src/sipnav/tui/: __init__.py  app.py  carriers_menu.py  menu.py
tests/: __init__.py  test_client.py  test_error_handling.py
